--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,9 +28,9 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.13"
+python = ">=3.9.2,<3.13"
 # Used for local development
-nautobot = "^2.0.0"
+nautobot = ">=2.4.18"
 nautobot-ssot = "^3.0.0"
 invoke = "^2.2.0"
 
